# tennoworth

./: .gitignore  .loop-journal.md  CLAUDE.md  README.md  SECURITY.md  wfm_demand.py  wfm_inventory.py  wfm_popular_rivens.py  wfm_results.csv
.claude/: settings.json
.claude/agents/: browser-security.md  companion-reviewer.md  companion-security.md  svelte5-reviewer.md  wfm-api-shape-check.md
.claude/commands/: audit-security.md  goal.md  rebuild-companion.md  recheck-wfm.md  scrape.md  ship.md  verify.md
.claude/scripts/: validate-edit.sh
.claude/workflows/: feature-ship.js  pre-commit-review.js  release-readiness.js  security-audit.js
.github/workflows/: audit.yml  build-scrape.yml  build-web.yml  refresh-market.yml  release-companion.yml
.mockups/: next-features.html
.mockups/layouts/: agent-01-tabs.html  agent-02-sidebar.html  agent-03-accordion.html  agent-04-drawer.html  agent-05-dense-dashboard.html  agent-06-filter-rail.html  agent-07-command-palette.html  agent-08-mobile-bottom-nav.html  agent-09-split-detail.html  agent-10-density-modes.html  index.html  me-01-briefing-inbox.html  me-02-terminal-repl.html
.research/: wiki-value-opportunities.md
companion/: CLAUDE.md  Cargo.toml  README.md
companion/.cargo/: audit.toml
companion/market-math/: Cargo.toml
companion/market-math/src/: lib.rs  sell_priority.rs
companion/src/: main.rs
companion/tennoworth-desktop/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
companion/tennoworth-desktop/capabilities/: default.json
companion/tennoworth-desktop/icons/: icon.icns
companion/tennoworth-desktop/src/: db.rs  keyring_store.rs  main.rs  market.rs  sellables.rs  snapshot.rs  update.rs  wfm_session.rs
companion/wfm-client/: Cargo.toml
companion/wfm-client/src/: lib.rs
companion/wfm-core/: Cargo.toml
companion/wfm-core/src/: assistant.rs  auth.rs  error.rs  inventory.rs  lib.rs  listing.rs  pending.rs  platform.rs  scan.rs  util.rs
companion/wfm-fetch-inventory/: Cargo.toml
companion/wfm-fetch-inventory/src/: main.rs
companion/wfm-scrape/: Cargo.toml
companion/wfm-scrape/src/: clock.rs  coerce.rs  csvin.rs  fetch.rs  http.rs  jsonutil.rs  lib.rs  main.rs  orders.rs  reconcile.rs  render.rs  scrape.rs  stats.rs
deploy/: Caddyfile  README.md  pull-scrape.sh  pull-web.sh  run-scrape.sh  setup-container.sh  wfm-scrape-pull.service  wfm-scrape-pull.timer  wfm-scrape.service  wfm-scrape.timer  wfm-web-pull.service  wfm-web-pull.timer
docs/: branching.md  desktop-spike-findings.md  onboarding-friction.md  product-plan-2026-07.md  signing-runbook.md
prototype/: .gitignore  CLAUDE.md  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.js  vitest.config.js  vitest.config.ts  vitest.repro.config.ts
prototype/public/: _headers  install.ps1  install.sh  market.json  robots.txt  sitemap.xml  wfstat-catalog.json
prototype/src/: App.svelte  app.css  main.ts  vite-env.d.ts
prototype/src/components/: AssistantChat.svelte  CopyBtn.svelte  DropZone.svelte  InstallWidget.svelte  ListingReviewModal.svelte  MarketBrowser.svelte  MyOrdersPanel.svelte  ResultsTable.svelte  __effect_repro.svelte  __effect_repro.svelte.test.ts
prototype/src/lib/: __preset_effect_probe.svelte.test.ts  assistant.test.ts  assistant.ts  catalog-cache.ts  companion.test.ts  companion.ts  crypto.test.ts  crypto.ts  desktop-update.test.ts  desktop-update.ts  inventory.test.ts  inventory.ts  market-browse.test.ts  market-browse.ts  market.test.ts  market.ts  relic-planner.test.ts  relic-planner.ts  resolver.test.ts  resolver.ts  sell-priority.parity.test.ts  sell-priority.test.ts  sell-priority.ts  set-recos.test.ts  set-recos.ts  state-store.test.ts  state-store.ts  storage.test.ts  storage.ts  transport.test.ts  transport.ts  types.ts
scripts/: CLAUDE.md  csv_to_market_json.py  semantic_diff.py  sync-csp.mjs
tests/: test_convert_parity.py  test_scrape_parity.py  test_wfm_demand.py
tests/fixtures/convert/: fixture_responses.json  prior-market.json  wfm_results.csv
tests/fixtures/scrape/: fixture_responses.json
tests/fixtures/sell-priority/: cases.json
