# Workspace root. Members:
#   wfm-fetch-inventory — the player-facing companion binary (fetch/login/serve)
#   market-math         — pure market-data heuristics, ported from wfm_demand.py
#                         as phase 2 of the Python→Rust pipeline consolidation.
#                         No I/O, no deps; the future wfm-scrape binary builds
#                         on it. Keep it pure — that's what makes it testable
#                         against the frozen Python fixtures.
[workspace]
members = ["wfm-fetch-inventory", "market-math"]
resolver = "2"

# Shared by every member; the release binary size/behavior of
# wfm-fetch-inventory must not change from the pre-workspace layout.
[profile.release]
strip = true
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
