# TennoWorth desktop shell — Phase C (see docs/desktop-spike-findings.md). One
# window loading the built SPA via Tauri's asset protocol; the SPA's Transport
# drives wfm-core through thin `health` / `scan_inventory` commands. Login /
# listing / assistant are not wired here yet (they need the passphrase UI).
[package]
name = "tennoworth-desktop"
version = "0.1.0"
edition = "2021"
description = "TennoWorth desktop shell (Tauri v2). Webview loads the SPA; wfm-core invoked via Tauri commands (health, scan_inventory)."
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wfm-core = { path = "../wfm-core" }
