# TennoWorth desktop shell — Phase C (see docs/desktop-spike-findings.md). One
# window loading the built SPA via Tauri's asset protocol; the SPA's Transport
# drives wfm-core through thin `health` / `scan_inventory` commands. Login /
# listing / assistant are not wired here yet (they need the passphrase UI).
[package]
name = "tennoworth-desktop"
version = "0.1.0"
edition = "2021"
description = "TennoWorth desktop shell (Tauri v2). Webview loads the SPA; wfm-core invoked via Tauri commands (health, scan_inventory)."
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `tray-icon` enables the system tray (C6). Linux tray needs libayatana-
# appindicator at runtime; a failed tray init is logged and swallowed
# (window + notifications still work) — see init_tray.
tauri = { version = "2", features = ["tray-icon"] }
# Post-scan system notification ("N items worth ~Xp to sell"). Fired from Rust
# (NotificationExt), so no JS ACL entry is needed.
tauri-plugin-notification = "2"
# C5 auto-update against the GitHub-releases latest.json. Driven entirely from
# Rust through app-defined commands (check_update / install_update) — check on
# launch, notify, download+install only on explicit confirmation, apply on
# restart. The signature pubkey lives in tauri.conf.json; the private key is
# generated offline and never enters the repo (docs/signing-runbook.md §9).
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wfm-core = { path = "../wfm-core" }
# The sell-priority scoring (single source of truth, mirrored in sell-priority.ts)
# used to rank the tray + notification sellables. Pure, no-dep crate.
market-math = { path = "../market-math" }
# `bundled` compiles SQLite from source — no system libsqlite3 dependency, so the
# canonical desktop store works on a clean Windows/Linux box with nothing
# pre-installed (matches the "download → works" goal).
rusqlite = { version = "0.32", features = ["bundled"] }
# C4 market refresh: the one remote GET (tennoworth.app/market.json). Feature set
# is a subset of wfm-core's reqwest, so Cargo's feature unification adds no new
# build — egress stays in Rust, off the webview (prototype/CLAUDE.md rule).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "gzip"] }
