[package]
name = "wfm-client"
version = "0.1.0"
edition = "2021"
description = "Shared transport primitives for WFM API calls (UA, headers, envelope unwrap, retry, rate limiter). Library crate — no binary."
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "gzip", "json"] }
serde_json = "1"
