[package]
name = "wfm-core"
version = "0.1.0"
edition = "2021"
description = "Reusable core for the Warframe companion: process scan, inventory fetch, WFM auth + JWT storage, listing/order service, pending-plan store, and the DeepSeek assistant relay. Library crate — no terminal I/O, so both the CLI and a future desktop shell can drive it."
license = "MIT"

[dependencies]
anyhow = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "gzip", "json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
directories = "5"

# Login + JWT encryption
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Foundation",
] }
