[package]
name = "wfm-fetch-inventory"
version = "0.1.0"
edition = "2021"
description = "Linux+Windows companion that extracts Warframe inventory.json from the running game process."
license = "MIT"

# Thin adapter over wfm-core: this crate owns only CLI parsing and the loopback
# HTTP server (routing, session token, CORS, TTY passphrase prompting). Scan,
# fetch, auth/JWT, listing, pending-plan and the assistant relay all live in
# wfm-core, which pulls the heavy deps (reqwest, crypto, sysinfo, …) transitively.
[dependencies]
wfm-core = { path = "../wfm-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Interactive passphrase prompts for `login` / late listing unlock.
rpassword = "7"
# Constant-time session-token comparison (str == short-circuits on first byte).
subtle = "2"

# Serve subcommand (loopback HTTP server)
tiny_http = "0.12"
